<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_shade_1"
    android:fitsSystemWindows="true"
    tools:context=".MainActivities.activity_read_full_news">

    <RelativeLayout
        android:id="@+id/idToolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="15dp"
            android:fontFamily="@font/poppins_semi_bold_italic"
            android:padding="4dp"
            android:text="@string/news_details"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btnReadFullNews"
        android:layout_below="@+id/idToolBar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <ImageView
                android:id="@+id/imgForFullNews"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/news_image"
                android:padding="3dp"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/txtForFullNews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imgForFullNews"
                android:layout_margin="4dp"
                android:padding="3dp"
                android:text="@string/title"
                android:textColor="@color/green_shade"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtForFullNewsSubTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtForFullNews"
                android:layout_margin="4dp"
                android:padding="4dp"
                android:text="@string/sub_description"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtForFullNewsSubTitle"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"

                android:layout_marginBottom="4dp"
                android:padding="4dp"
                android:text="@string/content"
                android:textColor="@color/white" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtContent"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/comment_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:autofillHints=""
                        android:hint="@string/leave_a_comment"
                        android:imeOptions="actionSend"
                        android:inputType="text"
                        android:padding="10dp" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/comment_recycler_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </RelativeLayout>


    </ScrollView>

    <Button
        android:id="@+id/btnReadFullNews"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/read_full_news_from_source"
        android:textAllCaps="true"
        app:backgroundTint="@color/green_shade" />

    <WebView
        android:id="@+id/webView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>