<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:padding="20dp"
    tools:context=".fragments.fragment_userprofile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="20dp">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/imageProfile"
                android:layout_width="@dimen/_90sdp"
                android:layout_height="@dimen/_90sdp"
                android:scaleType="centerCrop"
                app:riv_mutate_background="true"
                app:riv_oval="true" />

            <TextView
                android:id="@+id/txtAddImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:contentDescription="@string/add_image"
                android:textColor="@color/black_shade_1"
                app:drawableEndCompat="@drawable/add_photo"
                app:drawableTint="#00003f" />
        </FrameLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/idImgSet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="20dp"
            android:backgroundTint="@color/green_shade"
            android:fontFamily="@font/poppins_bold"
            android:gravity="bottom"
            android:text="@string/set_image"
            android:textColor="@color/black_shade_1"
            android:visibility="gone" />

        <TextView
            android:id="@+id/profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/poppins_bold"
            android:text=""
            android:textColor="@color/grey"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/profile_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/poppins_italic"
            android:text=""
            android:textColor="@color/grey"
            android:textSize="16sp" />

        <Button
            android:id="@+id/logout_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_bg"
            android:text="@string/logout"
            android:textAllCaps="false"
            android:textSize="@dimen/_12ssp" />
        <!-- Add more profile information elements as needed -->
        <!-- Divider Line -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="50dp"
            android:background="@color/grey" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:padding="10dp"
            android:text="@string/other_web_apps_from_developer"
            android:textColor="@color/grey"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/projectFirstTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/ecommerce_hyperlink"
            android:textColor="@color/grey"
            android:textSize="@dimen/_10ssp" />

        <TextView
            android:id="@+id/projectSecondTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/cms_hyperlink_admin"
            android:textColor="@color/grey"
            android:textSize="@dimen/_10ssp" />

        <TextView
            android:id="@+id/projectSecondHomeTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/cms_hyperlink_home"
            android:textColor="@color/grey"
            android:textSize="@dimen/_10ssp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="20dp"
            android:background="@color/grey" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:padding="10dp"
            android:text="Preference:"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            android:textColor="@color/white"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>