<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardBackgroundColor="@color/grey"
    app:cardCornerRadius="13dp"
    app:cardElevation="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/idIVNews"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/news_headline"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/idTVNewsHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/idIVNews"
            android:layout_marginStart="8dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="0dp"
            android:fontFamily="@font/poppins_bold"
            android:maxLines="2"
            android:padding="3dp"
            android:text="@string/new_heading"
            android:textColor="@color/green_shade"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/idTVSubTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/idTVNewsHeading"
            android:layout_marginStart="8dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/poppins_italic"
            android:maxLines="3"
            android:padding="3dp"
            android:text="@string/sub_heading"
            android:textColor="@color/white"
            android:textSize="13sp" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/idTVSubTitle"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="@dimen/_8sdp"
            app:cardElevation="@dimen/_5sdp">

            <TextView
                android:id="@+id/idPublishedAt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:text="@string/published_at"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold|italic" />

        </com.google.android.material.card.MaterialCardView>
    </RelativeLayout>
</androidx.cardview.widget.CardView>