<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wave_pattern2"
    android:padding="@dimen/_24sdp"
    tools:context=".UserLoginRegister.UserRegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/logoLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_140sdp"
            android:layout_marginBottom="20dp"
            app:cardBackgroundColor="@color/black_shade_1"
            app:cardCornerRadius="50dp"
            app:cardElevation="@dimen/_6sdp"
            app:layout_constraintBottom_toTopOf="@+id/news_app"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/app_name"
                android:padding="20dp"
                android:src="@drawable/login_bg2" />
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/news_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/register_msg"
            android:textColor="@color/white"
            android:textSize="@dimen/_19ssp"
            app:layout_constraintBottom_toTopOf="@+id/username_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logoLayout" />

        <EditText
            android:id="@+id/username_register"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:autofillHints="username"
            android:background="@drawable/edittext_background"
            android:drawableStart="@drawable/username_person_outline"
            android:drawablePadding="10dp"
            android:drawableTint="@color/black"
            android:hint="Enter your username"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColor="#000000"
            android:textColorHint="#999999"
            app:layout_constraintBottom_toTopOf="@+id/email_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/news_app" />

        <EditText
            android:id="@+id/email_register"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:autofillHints="username"
            android:background="@drawable/edittext_background"
            android:drawableStart="@drawable/email_icon"
            android:drawablePadding="10dp"
            android:drawableTint="@color/black"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="#000000"
            android:textColorHint="#999999"
            app:layout_constraintBottom_toTopOf="@+id/contact_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/username_register" />

        <EditText
            android:id="@+id/contact_register"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:autofillHints="username"
            android:background="@drawable/edittext_background"
            android:drawableStart="@drawable/phone_icon"
            android:drawablePadding="10dp"
            android:drawableTint="@color/black"
            android:hint="@string/enter_your_contact"
            android:inputType="textPhonetic"
            android:padding="10dp"
            android:textColor="#000000"
            android:textColorHint="#999999"
            app:layout_constraintBottom_toTopOf="@id/address_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_register" />

        <EditText
            android:id="@+id/address_register"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:autofillHints="username"
            android:background="@drawable/edittext_background"
            android:drawableStart="@drawable/address_icon"
            android:drawablePadding="10dp"
            android:drawableTint="@color/black"
            android:hint="@string/enter_your_address"
            android:inputType="textPostalAddress"
            android:padding="10dp"
            android:textColor="#000000"
            android:textColorHint="#999999"
            app:layout_constraintBottom_toTopOf="@+id/registerPasswordLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/contact_register" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/registerPasswordLayout"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:textColorHint="#9E9E9E"
            app:boxBackgroundMode="outline"
            app:hintTextColor="#9E9E9E"
            app:layout_constraintBottom_toTopOf="@id/login_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address_register"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/grey"
            app:startIconDrawable="@drawable/password_icon"
            app:startIconTint="@color/grey">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_register"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="password"
                android:background="@drawable/edittext_background"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/login_button"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="40dp"
            android:background="@drawable/button_bg"
            android:text="@string/register"
            app:layout_constraintBottom_toTopOf="@id/txtHaveAnAccLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerPasswordLayout" />

        <LinearLayout
            android:id="@+id/txtHaveAnAccLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_button">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="italic"

                />

            <TextView
                android:id="@+id/txtLoginClick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/login_acc"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="#80669d"
                android:textSize="17sp"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

